fix carousel on mobile device orientation

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -22,6 +22,16 @@
   }
 }
 
+@media (min-width: 500px) and (max-width: 790px)
+  and (min-height: 360px) and (max-height: 450px){
+  .test img{
+    width: auto;
+    height: 90vh !important;
+    width: 100% !important;
+    max-height: 90vh;
+  }
+}
+
 @media (min-width: 1024px) {
   .test img{
     width: auto;
@@ -30,3 +40,16 @@
     max-height: 80vh;
   }
 }
+
+//@media screen
+//and (device-width: 360px)
+//and (device-height: 640px)
+//and (-webkit-device-pixel-ratio: 3)
+//and (orientation: landscape) {
+//  .test img{
+//    width: auto;
+//    height: 100vh !important;
+//    width: 100% !important;
+//    max-height: 100vh;
+//  }
+//}
